Add deploy script

--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
@@ -27,8 +30,11 @@
     "@mantine/notifications": "^6.0.13",
     "@mantine/nprogress": "^6.0.13",
     "@mantine/prism": "^6.0.13",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/system": "^5.13.7",
+    "@mui/x-data-grid": "^6.9.1",
     "@tabler/icons-react": "^2.22.0",
     "@tanstack/react-query": "^4.29.15",
     "@types/js-cookie": "^3.0.3",
@@ -37,22 +43,17 @@
     "embla-carousel-react": "^8.0.0-rc07",
     "js-cookie": "^3.0.5",
     "material-ui-icons": "^1.0.0-beta.36",
-    "react-axios": "^2.0.6",
-    "react-hook-form": "^7.45.1",
-    "styled-components": "^5.3.3",
-    "tailwindcss": "^3.3.2",
-    "zod": "^3.21.4",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.13.7",
-    "@mui/material": "^5.13.7",
-    "@mui/x-data-grid": "^6.9.1",
     "react": "^18.2.0",
+    "react-axios": "^2.0.6",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.1",
     "react-router-dom": "^6.14.1",
     "recharts": "^2.7.2",
-    "sass": "^1.63.6"
+    "sass": "^1.63.6",
+    "styled-components": "^5.3.3",
+    "tailwindcss": "^3.3.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -64,6 +65,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.24",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
