--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Install dependencies
         run: yarn install
 
+      - name: Build the App
+        run: yarn build
+
       - name: Configure Git
         run: |
           git config --global user.email "actions@github.com"
@@ -33,4 +36,4 @@ jobs:
           git checkout main -- docs
           git add .
           git commit -m "Deploy to GitHub Pages"
-          git push https://${{ secrets.GH_TOKEN }}@github.com/narvasha/venuematch.git main:docs
+          git push https://${{ secrets.GH_TOKEN }}@github.com/narvasha/venuematch.git main:main
