--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
           git checkout main -- docs
           git add .
           git commit -m "Deploy to GitHub Pages"
-          git push https://github.com/${{ secrets.GH_TOKEN }}narvasha/venuematch.git main:main
+          git push https://github.com/${{ secrets.GH_TOKEN }}@github.com/narvasha/venuematch.git main:main
 
