--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
           git checkout main -- docs
           git add .
           git commit -m "Deploy to GitHub Pages"
-          git push https://${{ secrets.GH_TOKEN }}@github.com/narvasha/venuematch.git main:main
+          git push https://${{ secrets.GH_TOKEN }}@github.com/narvasha/venuematch.git main:docs
